Add config to disable spawning with a material book