@@ -5,6 +5,7 @@ import net.minecraft.network.chat.Component;
 import net.minecraft.server.MinecraftServer;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.CreativeModeTab;
+import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
 import net.neoforged.bus.api.IEventBus;
 import net.neoforged.fml.ModContainer;
@@ -13,11 +14,13 @@ import net.neoforged.neoforge.capabilities.Capabilities;
 import net.neoforged.neoforge.capabilities.RegisterCapabilitiesEvent;
 import net.neoforged.neoforge.client.gui.ConfigurationScreen;
 import net.neoforged.neoforge.client.gui.IConfigScreenFactory;
+import net.neoforged.neoforge.common.ModConfigSpec;
 import net.neoforged.neoforge.common.NeoForge;
 import net.neoforged.neoforge.event.AddReloadListenerEvent;
 import net.neoforged.neoforge.event.entity.player.PlayerEvent;
 import net.neoforged.neoforge.event.server.ServerStartedEvent;
 import net.neoforged.neoforge.event.server.ServerStoppingEvent;
+import net.neoforged.neoforge.registries.DeferredItem;
 import net.silentchaos512.gear.client.ColorHandlers;
 import net.silentchaos512.gear.client.event.ExtraBlockBreakHandler;
 import net.silentchaos512.gear.client.event.GearHudOverlay;
@@ -35,7 +38,9 @@ import net.silentchaos512.lib.event.Greetings;
 import net.silentchaos512.lib.event.InitialSpawnItems;
 
 import javax.annotation.Nullable;
+import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 class SideProxy implements IProxy {
     @Nullable
@@ -88,15 +93,16 @@ class SideProxy implements IProxy {
 
     private static void commonSetup(FMLCommonSetupEvent event) {
         InitialSpawnItems.add(SilentGear.getId("starter_blueprints"), p -> {
-            if (Config.Common.spawnWithStarterBlueprints.get())
-                return Collections.singleton(SgItems.BLUEPRINT_PACKAGE.get().getStack());
-            return Collections.emptyList();
+            if (Config.Common.isLoaded() && Config.Common.spawnWithStarterBlueprints.get()) {
+                return List.of(SgItems.BLUEPRINT_PACKAGE.toStack());
+            }
+            return List.of();
         });
         InitialSpawnItems.add(SilentGear.getId("material_book"), p -> {
-            /*ServerTicks.scheduleAction(() -> {
-                p.sendSystemMessage(Component.literal("A new Silent Gear material book has been added. Enjoy!"));
-            });*/
-            return Collections.singleton(SgItems.MATERIAL_BOOK.toStack());
+            if (Config.Common.isLoaded() && Config.Common.spawnWithMaterialBook.get()) {
+                return List.of(SgItems.MATERIAL_BOOK.toStack());
+            }
+            return List.of();
         });
 
         NerfedGear.init();
